cabal-version:      3.0
name:               lf
version:            0.1.0.0
synopsis:           tree clone
homepage:           https://github.com/H-ANSEN/lf
license:            MIT
license-file:       LICENSE
author:             Teague Hansen
maintainer:         thanse23@asu.edu
build-type:         Simple

common common-settings
  default-language: Haskell2010
  ghc-options: -Wall -O

library
  import:          common-settings
  hs-source-dirs:  src
  exposed-modules: Lf
  build-depends:   base,
                   directory,
                   unix,
                   filepath

executable lf
  import:           common-settings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  other-modules:    OptParse
  build-depends:    base ^>=4.17.2.1,
                    optparse-applicative,
                    directory,
                    lf
